# ethernet_driver

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
diagrams/: lan8720_rmii_wiring.md
src/: eth.rs  log.rs  main.rs  net.rs
